--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+/* Quitar margen global */
+body, html {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* El componente raíz no debe tener margen tampoco */
+app-root {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
