--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -76,7 +76,7 @@
                 <div class="comentarios-lista">
                     <div *ngFor="let comentario of post.comentarios" class="comentario">
                     <div class="comentario-avatar">
-                        <img src="../../assets/img/avatar-masculino.png" alt="Avatar" class="avatar">
+                        <img src="https://icons.veryicon.com/png/o/miscellaneous/standard/avatar-15.png" alt="Avatar" class="avatar">
                     </div>
                     <div class="comentario-contenido">
                         <div class="comentario-cabecera">
@@ -91,7 +91,7 @@
                 <!-- Formulario para nuevo comentario -->
                 <div class="nuevo-comentario">
                     <div class="nuevo-comentario-avatar">
-                    <img src="assets/user-avatar.png" alt="Tu avatar" class="avatar">
+                    <img src="https://icons.veryicon.com/png/o/miscellaneous/standard/avatar-15.png" alt="Tu avatar" class="avatar">
                     </div>
                     <div class="nuevo-comentario-form">
                     <textarea 
