--- a/src/app/pages/listaAmigos/lista-amigos/lista-amigos.component.html
+++ b/src/app/pages/listaAmigos/lista-amigos/lista-amigos.component.html
@@ -25,8 +25,8 @@
           <i class="fas fa-user-circle"></i>
         </div>
         <div class="info">
-          <p class="nombre">{{ solicitud.solicitante.nombre }}</p>
-          <p class="email">{{ solicitud.solicitante.email }}</p>
+          <p class="nombre">{{ solicitud.usuarioSolicitante.username }}</p>
+          <p class="email">{{ solicitud.usuarioSolicitante.email }}</p>
         </div>
       </div>
       <div class="solicitud-acciones">
