--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="nav-left">
-  <img src="https://imgur.com/a/3wcJSYm" alt="Logo" class="logo" />
+  <img src="https://i.imgur.com/sfRo65t.png" alt="Logo" class="logo" />
     <a (click)="OpenHome()">Inicio</a>
     <a (click)="Openperfil()">Perfil</a>
   </div>
