Cambio en constante de registro

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -27,11 +27,11 @@
         <i class="bx bxs-user"></i>
       </div>
       <div class="input-box">
-        <input type="text" placeholder="Nombres" [(ngModel)]="registerData.name" name="regNombres" required />
+        <input type="text" placeholder="Nombres" [(ngModel)]="registerData.nombre" name="regNombres" required />
         <i class="bx bxs-user"></i>
       </div>
       <div class="input-box">
-        <input type="text" placeholder="Apellidos" [(ngModel)]="registerData.lastname" name="regApellidos" required />
+        <input type="text" placeholder="Apellidos" [(ngModel)]="registerData.apellido" name="regApellidos" required />
         <i class="bx bxs-user"></i>
       </div>
       <div class="input-box">
